- Add menu show/hide feature (need more visual development) - Fix some alignment issue on Disco Mode

--- a/tetris.css
+++ b/tetris.css
@@ -47,10 +47,24 @@ body, table, input {
 #switch {
 	position: relative;
 	top: 0px;
-	left: 0px;
+	left: 38px;
 	width: 25px;
 	height: 15px;
 }
+
+.button1{
+	position: absolute;
+	top:20px;
+	left: 160px;
+	color: red;
+}
+.button2{
+	position: absolute;
+	top:45px;
+	left : 160px;
+	color: red;
+}
+
 
 .grid1,	.grid2,	.grid3,	.grid4,	.grid5,	.grid6 { z-index: 10; position:	absolute; top: 0px;	width: 13px; height: 307px;	background:	#f4efe9; }
 .grid1 { left: 14px; }
@@ -153,7 +167,7 @@ body, table, input {
 #tetris-nextpuzzle {
 	position: absolute;
 	top: 20%;
-	left: 35%;
+	left: 120%;
 	background:	#ffffff;
 	overflow: visible;
 	display: none;
